flight-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-app-deployment
  namespace: flight-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flight-app
  template:
    metadata:
      labels:
        app: flight-app
    spec:
      containers:
      - name: flight-app
        image: srinu1816/flightservices:latest  # Use your local image
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flight-app-service
  namespace: flight-service
spec:
  selector:
    app: flight-app
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
